feat: ajout footer A

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Bienvenue sur EduConnect</h1>
 <p>Plateforme académique collaborative.</p>
+<footer>© 2025 EduConnect – Université Badji Mokhtar</footer>
 </body>
 </html>
